# serverless-cloudflare-search

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md  config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  serverless.yml
add/: Cargo.toml
add/src/: main.rs
index/: Cargo.toml
index/src/: main.rs
scripts/: init_secret.js
search/: Cargo.toml
search/src/: main.rs
worker/index/: package.json  wrangler.toml
worker/index-consumer/: package.json  wrangler.toml
worker/index-consumer/src/: index.ts
worker/index/src/: index.ts
worker/search/: package.json  tsconfig.json  wrangler.toml
worker/search/src/: index.ts
