[package]
name = "add"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["macros"] }
lambda_http = "0.7.3"
http = "0.2.9"
serde = "1.0.159"
serde_json = "1.0.95"